baml_language/crates/baml_tests/snapshots/compiles/json_alias_basic/baml_tests__compiles__json_alias_basic__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 13572
---
=== PPIR ===
class user.Wrapper {
  data: baml.json.json
}
class user.Wrapper$stream {
  data: baml.json.json$stream | null
}
function user.MakeWrapper() -> user.Wrapper  [expr] {
  {  } user.Wrapper { data: null }
}
function user.MatchJson(j: baml.json.json) -> string  [expr] {
  {  } match (j) { null => "null", b: bool => "bool", i: int => "int", f: float => "float", s: string => "string", arr: baml.json.json[] => "array", obj: map<string, baml.json.json> => "map" }
}
function user.ReturnArray() -> baml.json.json  [expr] {
  {  } [1, 2, 3]
}
function user.ReturnBool() -> baml.json.json  [expr] {
  {  } true
}
function user.ReturnFloat() -> baml.json.json  [expr] {
  {  } 3.14
}
function user.ReturnInt() -> baml.json.json  [expr] {
  {  } 42
}
function user.ReturnMap() -> baml.json.json  [expr] {
  {  } map { "key": "value" }
}
function user.ReturnNull() -> baml.json.json  [expr] {
  {  } null
}
function user.ReturnString() -> baml.json.json  [expr] {
  {  } "hello"
}
