baml_language/crates/baml_tests/snapshots/compiles/json_alias_basic/baml_tests__compiles__json_alias_basic__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.MakeWrapper() -> Wrapper {
    // Locals:
    let _0: Wrapper // _0 // return

    bb0: {
        _0 = user.Wrapper { const null };
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.MatchJson(j: baml.json.json) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: baml.json.json // j // param
    let _2: bool
    let _3: bool
    let _4: bool
    let _5: bool
    let _6: bool
    let _7: bool
    let _8: bool

    bb0: {
        _2 = copy _1 == const null;
        branch copy _2 -> [bb13, bb1];
    }

    bb1: {
        _3 = is_type(copy _1, bool);
        branch copy _3 -> [bb12, bb2];
    }

    bb2: {
        _4 = is_type(copy _1, int);
        branch copy _4 -> [bb11, bb3];
    }

    bb3: {
        _5 = is_type(copy _1, float);
        branch copy _5 -> [bb10, bb4];
    }

    bb4: {
        _6 = is_type(copy _1, string);
        branch copy _6 -> [bb9, bb5];
    }

    bb5: {
        _7 = is_type(copy _1, baml.json.json[]);
        branch copy _7 -> [bb8, bb6];
    }

    bb6: {
        _8 = is_type(copy _1, map<string, baml.json.json>);
        branch copy _8 -> [bb7, bb14];
    }

    bb7: {
        _0 = const "map";
        goto -> bb14;
    }

    bb8: {
        _0 = const "array";
        goto -> bb14;
    }

    bb9: {
        _0 = const "string";
        goto -> bb14;
    }

    bb10: {
        _0 = const "float";
        goto -> bb14;
    }

    bb11: {
        _0 = const "int";
        goto -> bb14;
    }

    bb12: {
        _0 = const "bool";
        goto -> bb14;
    }

    bb13: {
        _0 = const "null";
        goto -> bb14;
    }

    bb14: {
        return;
    }
}

fn user.ReturnArray() -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return

    bb0: {
        _0 = [const 1_i64, const 2_i64, const 3_i64];
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.ReturnBool() -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return

    bb0: {
        _0 = const true;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.ReturnFloat() -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return

    bb0: {
        _0 = const 3.14_f64;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.ReturnInt() -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return

    bb0: {
        _0 = const 42_i64;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.ReturnMap() -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return

    bb0: {
        _0 = { const "key": const "value" };
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.ReturnNull() -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return

    bb0: {
        _0 = const null;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.ReturnString() -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return

    bb0: {
        _0 = const "hello";
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.Wrapper.from_json(j: baml.json.json) -> Wrapper {
    // Locals:
    let _0: Wrapper // _0 // return
    let _1: baml.json.json // j // param
    let _2: string
    let _3: type

    bb0: {
        _2 = call const fn baml.json.stringify(copy _1) -> [bb1];
    }

    bb1: {
        _3 = load_type(Wrapper);
        _0 = call const fn baml.json.from_string<copy _3>(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.Wrapper.to_json(self: Wrapper) -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return
    let _1: Wrapper // self // param
    let _2: baml.json.json
    let _3: (baml.Null) -> baml.json.json throws never | (baml.Bool) -> baml.json.json throws never | (baml.Int) -> baml.json.json throws never | (baml.Float) -> baml.json.json throws never | (baml.String) -> baml.json.json throws never | (baml.json.json[]) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError | (map<string, baml.json.json>) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError
    let _4: baml.json.json
    let _5: Wrapper
    let _6: string

    bb0: {
        _5 = copy _1;
        _4 = copy _5.0;
        _6 = const "to_json";
        _3 = copy _4[_6];
        _2 = call copy _3() -> [bb1];
    }

    bb1: {
        _0 = { const "data": copy _2 };
        goto -> bb2;
    }

    bb2: {
        return;
    }
}
