baml_language/crates/baml_tests/snapshots/compiles/json_alias_basic/baml_tests__compiles__json_alias_basic__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.Wrapper {
  data: baml.json.json
}
function user.Wrapper.to_json(self: user.Wrapper) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  baml.json.parse(baml.json.to_string<Wrapper>(self)) : baml.json.json
}
function user.Wrapper.from_json(j: baml.json.json) -> user.Wrapper throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Wrapper
}
function user.MakeWrapper() -> user.Wrapper throws never {
  { : user.Wrapper
    Wrapper { data: null } : user.Wrapper
  }
}
function user.ReturnNull() -> baml.json.json throws never {
  { : null
    null : null
  }
}
function user.ReturnBool() -> baml.json.json throws never {
  { : true
    true : true
  }
}
function user.ReturnInt() -> baml.json.json throws never {
  { : 42
    42 : 42
  }
}
function user.ReturnFloat() -> baml.json.json throws never {
  { : 3.14
    3.14 : 3.14
  }
}
function user.ReturnString() -> baml.json.json throws never {
  { : "hello"
    "hello" : "hello"
  }
}
function user.ReturnArray() -> baml.json.json throws never {
  { : int[]
    [1, 2, 3] : int[]
  }
}
function user.ReturnMap() -> baml.json.json throws never {
  { : map<string, string>
    map { "key": "value" } : map<string, string>
  }
}
function user.MatchJson(j: baml.json.json) -> string throws never {
  { : "null" | "bool" | "int" | "float" | "string" | "array" | "map"
    match (j : baml.json.json) : "null" | "bool" | "int" | "float" | "string" | "array" | "map"
      null =>
        "null" : "null"
      b: bool =>
        "bool" : "bool"
      i: int =>
        "int" : "int"
      f: float =>
        "float" : "float"
      s: string =>
        "string" : "string"
      arr: baml.json.json[] =>
        "array" : "array"
      obj: map<string, baml.json.json> =>
        "map" : "map"
  }
}
class user.Wrapper$stream {
  data: null | baml.json.json$stream
}
