baml_language/crates/baml_tests/snapshots/compiles/json_alias_basic/baml_tests__compiles__json_alias_basic__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.MakeWrapper() -> Wrapper {
    alloc_instance user.Wrapper
    load_const null
    init_field .data
    return
}

function user.MatchJson(j: baml.json.json) -> string {
    load_var j
    load_const null
    cmp_op ==
    pop_jump_if_false L0
    jump L11

  L0:
    load_var j
    is_type bool
    pop_jump_if_false L1
    jump L10

  L1:
    load_var j
    is_type int
    pop_jump_if_false L2
    jump L9

  L2:
    load_var j
    is_type float
    pop_jump_if_false L3
    jump L8

  L3:
    load_var j
    is_type string
    pop_jump_if_false L4
    jump L7

  L4:
    load_var j
    is_type baml.json.json[]
    pop_jump_if_false L5
    jump L6

  L5:
    load_var j
    is_type map<string, baml.json.json>
    pop_jump_if_false L12
    load_const "map"
    jump L12

  L6:
    load_const "array"
    jump L12

  L7:
    load_const "string"
    jump L12

  L8:
    load_const "float"
    jump L12

  L9:
    load_const "int"
    jump L12

  L10:
    load_const "bool"
    jump L12

  L11:
    load_const "null"

  L12:
    return
}

function user.ReturnArray() -> baml.json.json {
    load_const 1
    load_const 2
    load_const 3
    alloc_array 3
    return
}

function user.ReturnBool() -> baml.json.json {
    load_const true
    return
}

function user.ReturnFloat() -> baml.json.json {
    load_const 3.14
    return
}

function user.ReturnInt() -> baml.json.json {
    load_const 42
    return
}

function user.ReturnMap() -> baml.json.json {
    load_const "value"
    load_const "key"
    alloc_map 1
    return
}

function user.ReturnNull() -> baml.json.json {
    load_const null
    return
}

function user.ReturnString() -> baml.json.json {
    load_const "hello"
    return
}
